selfhost/test/parser/match_error_no_lbrace.out
Error at %FILE_NAME%:1:11
Unexpected token 'identifier', expected '{':
  |  match foo bar()
               ^